Fix a weired layout bug.

--- a/hub-login/styles/globals.css
+++ b/hub-login/styles/globals.css
@@ -29,3 +29,7 @@ body{
 html {
   scroll-behavior: smooth;
 }
+
+#__next {
+  width: 100%;
+}
